fix: tidy up dark mode toc styles

--- a/src/styles/_TableOfContents.scss
+++ b/src/styles/_TableOfContents.scss
@@ -22,33 +22,17 @@
     color: #9daab6;
   }
 
-  a {
-    padding: 7px 24px 7px 16px;
-
-    &:hover {
-      color: #5c6975;
-      text-decoration: none;
-      background-color: rgb(230, 236, 241);
-    }
+  &__inner {
+    padding: 7px 20px 7px 12px;
   }
 
-  &--child {
-    color: rgb(157, 170, 182);
+  a {
+    &:hover {
+      text-decoration: none;
+    }
   }
 
   &--active {
-    a {
-      color: #3884ff;
-      background-color: white;
-      border-color: #e6ecf1;
-
-      &:hover {
-        color: #3884ff;
-        background-color: white;
-        border-color: #e6ecf1;
-      }
-    }
-
     &--child {
       border-left: none;
     }
@@ -63,18 +47,8 @@
       font-size: 12px;
       font-weight: 700;
       line-height: 1.2;
-      letter-spacing: 1.2px;
+      letter-spacing: 1px;
       text-transform: uppercase;
-    }
-
-    a {
-      color: #9daab6;
-      cursor: initial;
-
-      &:hover {
-        color: #9daab6;
-        background-color: inherit;
-      }
     }
   }
 }
